adding of a loader

--- a/src/app/modules/contact-us/contact-us/contact-us.component.html
+++ b/src/app/modules/contact-us/contact-us/contact-us.component.html
@@ -108,6 +108,7 @@
                 </div>
               <button type="submit">submit</button>
             </form>
+            <div *ngIf="isLoading" class="loader">Loading...</div>
           </div>
         </div>
     </div>
@@ -220,3 +221,10 @@
       </section>
   </div>
   <app-footer></app-footer>  
+
+
+  <app-navbar></app-navbar>
+<main class="main">
+    
+    <!-- Rest of your template -->
+</main>
