--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -11,7 +11,7 @@ img{
 }
 #background-video {
     width: 100%;
-    height: 100svh;
+    height: 100%;
     object-fit: cover;
     position: absolute;
     left: 0;
@@ -34,7 +34,7 @@ img{
  
  .header-hero{
     color: $white;
-    padding-top: 27vh;
+    padding-top: 17vh;
     font-weight: 700;
     font-size: clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
     text-transform: capitalize;
