--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -2,43 +2,41 @@
     <main class="main-container">
         <div class="footer1">
             <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Proscene.</h3>
-            <p class="p-solutions1 p-2"><a routerLink="Southern Byp, Nairobi" target="_blank"><ng-icon
+            <p class="p-solutions1 p-2"><a routerLink="/https://www.google.com/maps/place/Proscene+Systems+Ltd/@-1.30039,36.7015552,15z/data=!4m6!3m5!1s0x182f1737f3e963d7:0xdc908ed52a11bc93!8m2!3d-1.30039!4d36.7015552!16s%2Fg%2F11b6g9x9k6?entry=ttu" target="_blank"><ng-icon
                         name="heroMapPin"></ng-icon> Southern Bypass, Nairobi</a></p>
-            <p class="p-solutions1 p-2"><a routerLink=""><ng-icon name="heroPhone"></ng-icon> 0713761269</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="info@proscene.co.ke"><ng-icon
-                        name="heroChatBubbleLeftRight"></ng-icon> info@proscene.co.ke</a></p>
+            <p class="p-solutions1 p-2"><ng-icon name="heroPhone"></ng-icon> 0713761269</p>
+            <p class="p-solutions1 p-2"><a href="mailto:info@proscene.co.ke"><ng-icon name="heroChatBubbleLeftRight"></ng-icon> info@proscene.co.ke</a></p>
         </div>
         <div class="footer2">
             <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Solutions.</h3>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/mission">Education</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/vision">Video walls</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/team">Unified communications</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/mission">Meeting solutions</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/vision">Digital signage</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/team">Government projects</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/mission">Law firm technology</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="/about-us/vision">Religious Organisations</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/education">Education</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/digital-signage">Video walls and Digital signage</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/unified-communications">Unified communications</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/meetings">Meeting solutions</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/government">Government projects</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/law">Law firm technology</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/religious">Religious Organisations</a></p>
         </div>
         <div class="footer3">
             <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Partners.</h3>
     
-            <p class="p-solutions1 p-2"><a routerLink="">LG</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Optoma</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Extron</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Samsung</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Epson</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Avaya</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Panasonic</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">LG</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Optoma</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Extron</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Samsung</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Epson</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Avaya</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Panasonic</a></p>
     
         </div>
         <div class="footer4">
             <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Useful Links.</h3>
             <p class="p-solutions1 p-2"><a routerLink="">Home</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Contact Us</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Blog</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">See Demo</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Shop</a></p>
-            <p class="p-solutions1 p-2"><a routerLink="">Support</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/contact-us">Contact Us</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/blog">Blog</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">See Demo</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/coming-soon">Shop</a></p>
+            <p class="p-solutions1 p-2"><a routerLink="/globalsupport">Support</a></p>
         </div>
     </main>
     <div class="bottom">
