--- a/src/themes.scss
+++ b/src/themes.scss
@@ -2,6 +2,7 @@ $text:#535f69;
 $grey: #f4f4f4d5;
 $white:#ffff;
 $the-blue:#0a0a22;
-$yellowish:#ED4B25;
-// Both of the h1 and p headings below have been used for just the coming soon page only- the two after this comment.
+$yellowish:#DB3A34;
+$secondary:#084C61;
+$tertiary:#177E89;
 
