--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -22,27 +22,24 @@
     outline: none;
     color: white;
     background-color: inherit;
-    margin: 0; /* Important for vertical align on mobile phones */
+    margin: 0; 
   }
-  
-  /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
   }
   
-  /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
     position: fixed;
     left: 0;
-    background-color:#0a0a22 ;
-    color: black;
+    background-color:$secondary ;
+    color: $secondary;
     padding-inline: 3px;
     border-radius: 15px;
     height: 100vh;
     width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px #084c613d;
     z-index: 1;
   }
 
@@ -50,25 +47,19 @@
     grid-template-columns: repeat(2, 1fr);
     border-radius: 15px;
   }
-  
-  /* Links inside the dropdown */
   .dropdown-content a {
-    color:#0a0a22;
+    color:$secondary;
     padding: 15px 16px;
     width: 100%;
     text-decoration: none;
     display: block;
 
-  }
- 
-  
+  } 
   /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-    z-index: 9950;
-}
- 
-  
+//   .dropdown:hover .dropdown-content {
+//     display: block;
+//     z-index: 9950;
+// } 
 .space-around{
     display: flex;
     justify-content: space-between;
@@ -77,12 +68,10 @@
     align-items: center;
     width: 100%;
     justify-content: space-between;
-    background:#0a0a22;
-    box-shadow: 2px 2px 2px #0a0a22;
+    background:$secondary;
     position: fixed;
     z-index: 9999;
 top: 0;
-    // color:#fff
 }
 .chevron{
     display: flex;
@@ -128,7 +117,6 @@ top: 0;
     padding: .4em;
     border-radius: 50%;
     height: 2em;
-// display: inline-block;
 width: 2em;
 }
 .card-nav{
@@ -172,7 +160,7 @@ width: 2em;
         z-index: 1000;
         flex-direction: column;
         padding: min(30vh, 10rem) 2em;
-        background: hsla(227, 47%, 4%, 0.815);
+        background: #084c61ee;
         transition: transform 350ms ease-out;
         transform: translateX(100%);
     
@@ -250,7 +238,7 @@ display: none;
     position: fixed;
     top: 7vh;
     left: 0;
-    background-color:#0a0a22 ;
+    background-color:$secondary ;
     color: black;
     padding-top: 3.4rem;
     padding-left: 2rem;
