--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,9 +92,9 @@ $hero-title:clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
   .demo-button1{
     border: 1px solid #fff;
     padding: 4px 21px;
-  text-transform: uppercase;
-  background-color: #0a0a22;
-  color: #fff;
+  // text-transform: uppercase;
+  background-color: #fff;
+  color: $secondary !important;
   border-radius: 30px;
   transition: all 0.5s ease;
   }
@@ -103,7 +103,7 @@ $hero-title:clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
   padding: 4px 21px;
   text-transform: capitalize;
   cursor: pointer;
-  background-color: #0a0a22;
+  background-color: $secondary;
   color: #fff;
   border-radius: 30px;
   transition: all 0.5s ease;
@@ -117,10 +117,10 @@ $hero-title:clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
   }
  
 .p-solutions{
-  font-size: 1em;
-  font-weight: 300;
+  font-size: clamp(1rem, 0.9661rem + 0.1695vw, 1.05rem);
+  font-weight: 400;
   line-height: 1.4;
-  color: $text;
+  color: rgb(115, 115, 115);
 }
 //the services section css begins here
 .services-header{
