--- a/src/app/modules/shared/footer/footer.component.scss
+++ b/src/app/modules/shared/footer/footer.component.scss
@@ -2,7 +2,7 @@
 $gap-big:2em;
 $gap-small:1em;
 .main{
-    background-color:$the-blue ;
+    background-color:$secondary ;
 }
 .main-container{
    
