--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -18,7 +18,7 @@
             
 
             <li class="dropdown">
-                <a class="dropbtn chevron" (click)="toggleDropdown($event)" routerLink="">
+                <a class="dropbtn chevron" (click)="toggleDropdown($event)">
                     <span aria-hidden="true"></span>Solutions <ng-icon name="heroChevronDown"></ng-icon>
                 </a>
                 <div class="dropdown-content">
