--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,7 +1,7 @@
 $text:#535f69;
 $grey: #f4f4f4d5;
 $white:#ffff;
-$the-blue:#0a0a22;
+$the-blue:#084C61;
 $yellowish:#DB3A34;
 $secondary:#084C61;
 $tertiary:#177E89;
