--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -110,9 +110,9 @@
         <div class="images images-back1">
         </div>
         <div class="flex1-words flex1-words-p">
-            <h2 class="h2-offers">
+            <h3 class="h3-solutions">
                 Latest products and innovations from Proscene
-            </h2>
+            </h3>
             <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
                 easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
                 to asssist in understanding.</p>
