--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,10 +52,16 @@ $hero-title:clamp(2.5rem, 10vw + 0.5rem, 3.5rem);
   z-index: 2;
 }
 .h2-offers{
-  padding-top: 1em;
-  font-size: clamp(1rem, 10vw + 0.5rem, 2rem);
-  color: #0a0a22;
-  font-weight: 600;
+  color: $secondary;
+ font-size: clamp(1.4238rem, 1.0921rem + 1.6585vw, 2.6469rem);
+line-height: 3rem;
+font-weight: 500;
+}
+.h3-solutions{
+  color: $secondary;
+ font-size: clamp(1.4238rem, 1.0921rem + 1.6585vw, 2.6469rem);
+line-height: 3rem;
+font-weight: 500;
 }
 .offers-p{
   font-size: clamp(1rem, 5vw + 0.5rem, 1.1rem) ;
