bug fixing, responsiveness

--- a/src/app/modules/services/av-room-design/av-room-design.component.html
+++ b/src/app/modules/services/av-room-design/av-room-design.component.html
@@ -35,9 +35,9 @@ with VR design services
             </h2>
             <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Design services help you envision, validate, and get feedback on room designs and technology integrations before you invest in and build them.</p>
             <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Accelerates the design process while building buy-in for the finished results. This service allows multiple stakeholders to be engaged in human-centric design thinking, including the often-overlooked end user.</p>
-                <a routerLink="/contact-us" class="demo-button">Contact us</a>
+                <a routerLink="/contact-us" class="demo-button mb-2">Contact us</a>
         </div>
-        <div class="images images-back1">
+        <div class="images images-back1 mt-4">
             <img [lazyLoad]="'https://images.unsplash.com/photo-1605647540924-852290f6b0d5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHZyfGVufDB8fDB8fHww'" loading="lazy" alt="design using virtual reality" srcset="">
         </div>
     </div>
