--- a/src/app/modules/solutions/religious/religious.component.html
+++ b/src/app/modules/solutions/religious/religious.component.html
@@ -109,10 +109,10 @@
                 </div>
     
                 <div class="flex1-words flex1-words-p law-center">
-                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0; color: white !important;">
                         Supplying church with reliable technology to ensure meetings run smoothly and feature modern capabilities isn’t the only thing we do. Proscene designs integrated UCC ecosystems that are easy to use, provide superior user and client experiences, and are compatible with the cloud-based collaboration solutions you prefer to use.
                     </p>
-                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0; color: white !important;">
                         Partnering with top-quality brands, we provide solutions for church that include:
                     </p>
                         <ul>
