--- a/src/app/modules/solutions/unified/unified.component.html
+++ b/src/app/modules/solutions/unified/unified.component.html
@@ -7,7 +7,7 @@
                 <p class="hero-p2 header-p pt-2">
                     Unified communications and collaboration (UCC) means much more than video conferencing. In the hybrid workplace, users connect through voice and phone, presence, video conferencing, messaging, live chat, file sharing, screen sharing, whiteboarding, webinars, and live streaming.
                 </p>
-                <h5 class="hero-p pb-7">Proscene helps plan, deploy, operate, and optimize UCC solutions to keep your teams connected.</h5>
+                <h5 class="hero-p2 header-p b-7">Proscene helps plan, deploy, operate, and optimize UCC solutions to keep your teams connected.</h5>
                 <a routerLink="/coming-soon" class="demo-button">Find gifts</a>
             </div>
             <img [lazyLoad]="'/assets/960x0.webp'" loading="lazy" alt="A woman Holding a tablet" alt="" class="hero-image" srcset="">
