--- a/src/app/modules/solutions/digital/digital.component.scss
+++ b/src/app/modules/solutions/digital/digital.component.scss
@@ -4,7 +4,7 @@
     z-index: 2;
 }
 .header-p{
-    color: $the-blue !important;
+    color: #0a0a22 !important;
 }
 .picturesdigital{
     display: grid;
