--- a/src/app/modules/solutions/religious/religious.component.scss
+++ b/src/app/modules/solutions/religious/religious.component.scss
@@ -1,4 +1,8 @@
 @import 'src/themes.scss';
+.hero-title{
+    font-size: clamp(2.5rem, 4vw + 0.5rem, 3.5rem) !important;
+    color: black;
+}
 .hero{
     position: relative;
     height: 100vh;
@@ -6,7 +10,7 @@
     padding-bottom: 3rem;
 }
 .header-p{
-    color: $the-blue !important;
+    color: #0a0a22 !important;
 }
 .container-words{
     padding-inline: 2em;
@@ -160,6 +164,9 @@ input{
     }
 }
 @media (min-width:35em) and (max-width:59em) {
+    .hero-title{
+        color: $the-blue;
+    }
     .solutions{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -196,6 +203,9 @@ input{
 }
 
 @media (min-width:60em) {
+    .hero-title{
+        color: $the-blue;
+    }
     .hero-image{
     -webkit-mask-image: linear-gradient(to left, black, black 10%, transparent);
     mask-image: linear-gradient(to left, black, black 10%, transparent);     
